add header style

--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>FORD MUSTANG</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/icon.png" type="image/png" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <h1>FORD MUSTANG</h1>
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <h2>About Mustang</h2>
+        <div class="box-wrapper">
+          <div class="box">
+            <p>
+              The Ford Mustang is a series of American automobiles manufactured
+              by Ford. In continuous production since 1964, the Mustang is
+              currently the longest-produced Ford car nameplate
+            </p>
+          </div>
+          <div class="box">
+            <p>
+              The Ford Mustang is a series of American automobiles manufactured
+              by Ford. In continuous production since 1964, the Mustang is
+              currently the longest-produced Ford car nameplate
+            </p>
+          </div>
+          <div class="box">
+            <p>
+              The Ford Mustang is a series of American automobiles manufactured
+              by Ford. In continuous production since 1964, the Mustang is
+              currently the longest-produced Ford car nameplate
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
