--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
     </header>
     <section>
       <div class="container">
-        <h2>About Mustang</h2>
+        <h2>About Mustang:</h2>
         <div class="box-wrapper">
-          <div class="box">
+          <div class="box img1">
             <p>
               The Ford Mustang is a series of American automobiles manufactured
               by Ford. In continuous production since 1964, the Mustang is
               currently the longest-produced Ford car nameplate
             </p>
           </div>
-          <div class="box">
+          <div class="box img2">
             <p>
               The Ford Mustang is a series of American automobiles manufactured
               by Ford. In continuous production since 1964, the Mustang is
               currently the longest-produced Ford car nameplate
             </p>
           </div>
-          <div class="box">
+          <div class="box img3">
             <p>
               The Ford Mustang is a series of American automobiles manufactured
               by Ford. In continuous production since 1964, the Mustang is
